crates/strider/tests/snapshots/v2__arm__control__count_bits.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v6" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "v6" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "7" -> "v6" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v8" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "7" -> "v8" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "5" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "10" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v8" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "10" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "13" -> "10" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "14" -> "10" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "15" -> "10" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "15" [label="init\nd1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="init\nd0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "16" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "17" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "17" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "17" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" [label="φ r3", shape=house, fillcolor="#163030"];
  "5" -> "18" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "21" -> "18" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "21" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "20" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "16" [label="φ r0", shape=house, fillcolor="#163030"];
  "5" -> "16" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "12" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "23" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "24" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "24" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "25" -> "24" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "25" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "26" -> "25" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "26" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "27" -> "26" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "27" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "28" -> "27" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "28" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "20" -> "28" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "28" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "30" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v2" -> "30" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" -> "30" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "13" -> "30" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "14" -> "30" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "15" -> "30" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "21" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
